# test_poco

./: AbstractPlugin.h  CMakeLists.txt  PluginLibrary.cc  main.cc  readme.md
